code13/app/client/mgb.css
.ui.sidebar {
  overflow: visible !important;
  z-index: 1000 !important
}

#root {
  height: auto;
}

.no-events{
  pointer-events: none;
}

.bold.active{
  font-weight: bold;
}

body {
/*   -webkit-font-smoothing: antialiased; */
}

.mgb-pixelated {
  image-rendering: -moz-crisp-edges;         /* Firefox */
  image-rendering:   -o-crisp-edges;         /* Opera */
  image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
  image-rendering: crisp-edges;
  image-rendering: pixelated;
}


.mgb-suir-plainSegment {
   border: 0 !important;                 /* SUI has a habit of putting unwanted dividers on horizontal segments */
   background: transparent !important;
}

.accept-drop{
  position: relative;
}

body.dragging {
  cursor: hand;
}

body.dragging .accept-drop:after{
  content: attr(data-drop-text);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  text-align: center;
  font-size: 110%;
  border: solid 1px;
}
body.dragging .accept-drop:hover{
  background-color: rgba(255,255,255,0.9);
}


.mgb-keycap-button {
  background-color: whitesmoke;
  border: 1px solid lightgrey;
  border-radius: 3px;
  padding: 1px 3px 1px 3px;
  display: inline-block;
  min-width: 1.5em;
  text-align: center;
  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2),0 0 0 2px #ffffff inset;
}

/***************************************
 *        Map Editor Properties        *
 ***************************************/
.compact {
  margin-top: -19px;
}
.compact .compact > .ui.accordion .title.active,
.compact .compact > .ui.accordion div.label .title
{
  padding-bottom: 0 !important;
  padding-top: 3px !important;
  margin: 0 !important;
}
.compact .compact.ui.content.active {
  padding: 4px;
  margin: 0;
}
.compact .ui.input.fluid{
  padding-left: 30%;
}
.ui.styled.accordion .compact .accordion .active.title {
  padding-bottom: 0;
}
.ui.styled.accordion .compact .accordion .column > .title {
  padding: 0.1em 0 0 5px;
  position: absolute;
  background-color: #eee;
  z-index: 1;
  width: 38%;
  line-height: 26px;
  text-overflow: ellipsis;
  overflow: hidden;
  top: 1px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  white-space: nowrap;
}
.compact .ui.input.fluid a {
  float: right;
  cursor: pointer;
}
.compact .title {
  position: relative;
}
.compact .delete{
  display: block;
  position: absolute;
  right: -8px;
  top: -2px;
}
.ui.styled.accordion .compact .accordion div.label {
  padding: 0;
  position: relative;
}
.compact .ui.input > input,
.compact .ui.input > select,
.compact .ui.input > .dropdown{
  font-size: 10pt;
  padding: 0.3em 0.5em 0.3em 10%;
  margin: 2px 2px 2px 5px;
  min-height: 2em;
}
.compact > label .title{
  padding: 0.1em;
}
.compact > .ui.accordion.array.content {
  padding: 0 10px;
}

/***************************************
 *             SUI Hacks               *
 * TODO(@levi): remove / move to theme *
 ***************************************/
.icon.flip{
  transform: scaleX(-1);
}
.icon.animate.rotate{
  -webkit-animation: rotate 5s infinite; /* Chrome, Safari, Opera */
  animation: rotate 5s infinite;
  -webkit-animation-timing-function: linear; /* Chrome, Safari, Opera */
  animation-timing-function: linear;
}
.animate{
  transition: .3s !important;
}
.no-animate .animate{
  transition: 0s !important;
}


.mgb-assetcard-width
{
  min-width: 230px;
  max-width: 230px;
}

.mgb-projectcard-width
{
  min-width: 230px;
  max-width: 230px;
}

.mgb-useritem-width-normal
{
  min-width: 230px;
  max-width: 230px;
}

.mgb-useritem-width-narrow
{
  min-width: 118px;
  max-width: 118px !important;
}

/***************************************
 *            MGB Toolbar              *
 ***************************************/
.mgb-toolbar .button.main{
  z-index: 1;
}

.mgb-toolbar .vertical{
  width: 100%;
}
.mgb-toolbar .vertical *{
  width: 100%;
}

.invisible{
  opacity: 0;
  display: none !important;
}
/* class that highlights element for short duration */
.ui.button.isvisible.new {
  animation-name: highlight !important;
  /*animation-iteration-count: infinite !important;*/
  animation-iteration-count: 1 !important;
  animation-duration: 1s !important;
  perspective: 1500px;
}
@keyframes blur {
  0%{
    background-color: red;
  }
  100%{

  }
}
@keyframes highlight {
  0%{
    /*transform: rotateY(-90deg);*/
    box-shadow: 0 0 5px 3px #080;
    /*background-color: rgba(255,0,0,0.7);*/
  }
  100%{
    /*transform: rotateY(360deg);*/
    box-shadow: 0 0 0 0 #040;
  }
}
@keyframes fadein {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}
@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(359deg);
  }
}
/***************************************
 *            Code Editor              *
 ***************************************/
.lint-error-text {
  display: none;
  position: absolute;
  white-space: pre;
  word-wrap: normal;
  background-color: red;
  border-radius: 5px;
  z-index: 100;
  left: 50px;
  padding: 1px 3px;
  border: solid 1px rgba(0,0,0,0.3);
}

.lint-error:hover .lint-error-text {
  display: block;
}
/* this is special read only case in the code editor*/
.read-only .CodeMirror:after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.1);
}

.mgb-show-on-parent-hover {
  opacity: 0;
}

*:hover > .mgb-show-on-parent-hover {
  opacity: 1;
}

.allInline > .inline.fields {
  padding: 0 5px;
  margin: 0;
  line-height: 38px;
}
.allInline > * {
  display: inline-block !important;
}
.mgb-disabled{
  pointer-events: none;
  background-color: #f1f1f1;
  padding: 5px;
  border-radius: 6px;
}
.mgb-disabled *{
  color: #999 !important;
}
.loading-notification{
  position: absolute;
  background-color: orange;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  border-radius: 7px;
  padding: 2px 20px;
  z-index: 1;
  top: 12px; /* move down as overflow hides top of */
  transition: 1s;
}

.ui.card.animated.fadeIn:hover{
  position: relative;
  z-index: 1;
}
.blink {
  animation: blink-animation 1s steps(5, start) infinite;
  -webkit-animation: blink-animation 1s steps(5, start) infinite;
}
@keyframes blink-animation {
  to {
    visibility: hidden;
  }
}
@-webkit-keyframes blink-animation {
  to {
    visibility: hidden;
  }
}

